update https > http

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript">
     function load()
     {
-    window.location.href = "https://lexanne.io/Assets/LexannePainter_Resume.pdf";
+    window.location.href = "http://lexanne.io/Assets/LexannePainter_Resume.pdf";
 
     }
     </script>
